--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "API project for freeCodeCamp",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "DEBUG=app* nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "dotenv": "^8.2.0",
-    "express": "^4.16.4",
-    "cors": "^2.8.5"
+    "express": "^4.16.4"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,11 @@
     "node",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^8.48.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "nodemon": "^3.0.1"
+  }
 }
