--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^8.2.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "multer": "^1.4.5-lts.1"
   },
   "repository": {
     "type": "git",
