--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "^4.3.4",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "iconv-lite": "^0.6.3",
     "multer": "^1.4.5-lts.1"
   },
   "repository": {
